Fixed text wrap.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,8 +21,7 @@
     border-radius: 0.7rem;
     padding: 0.3rem 0.7rem;
     display: inline-block;
-    width: min-content;
-    text-wrap: nowrap;
+    width: fit-content;
     position: relative;
 }
 
